# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "designate-bind-k8s"
version = "9.0"
requires-python = "~=3.12.0"

dependencies = [
    "jinja2",
    "lightkube",
    "lightkube-models",
    "lightkube-extensions@git+https://github.com/canonical/lightkube-extensions.git",
    "ops",
    "tenacity", # From ops_sunbeam
    "opentelemetry-api~=1.21.0",  # charm_tracing library -> opentelemetry-sdk requires 1.21.0
]
