# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "ironic-conductor-k8s"
version = "2025.1"
requires-python = "~=3.12.0"

dependencies = [
    "setuptools<82.0.0",  # dropped pkg_resources https://setuptools.pypa.io/en/stable/history.html#v82-0-0
    "jinja2",
    "jsonschema",
    "lightkube",
    "lightkube-models",
    "lightkube-extensions@git+https://github.com/canonical/lightkube-extensions.git",
    "pydantic",
    "python-keystoneclient",
    "python-glanceclient",
    "python-swiftclient",
    "ops",
    "interface_tls_certificates@git+https://opendev.org/openstack/charm-ops-interface-tls-certificates",
    "tenacity", # From ops_sunbeam
    "opentelemetry-api~=1.21.0",  # charm_tracing library -> opentelemetry-sdk requires 1.21.0
]

[tool.uv]
constraint-dependencies = [
    # based on https://raw.githubusercontent.com/openstack/requirements/stable/2025.1/upper-constraints.txt
    "jinja2===3.1.5",
    "jsonschema===4.23.0",
    "python-keystoneclient===5.6.0",
    "python-glanceclient===4.8.0",
    "python-swiftclient===4.7.0",
    "tenacity===9.0.0",
]
