# Copyright 2022 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "keystone-k8s"
version = "0.0"
requires-python = ">=3.10"

dependencies = [
    "cryptography",
    "jinja2",
    "jsonschema",
    "pydantic",
    "lightkube",
    "lightkube-models",
    "ops",
    "pwgen",
    "python-keystoneclient",  # keystone-k8s
    "tenacity", # From ops_sunbeam
    "opentelemetry-api~=1.21.0",  # charm_tracing library -> opentelemetry-sdk requires 1.21.0
]
