# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "manila-cephfs-k8s"
version = "2026.1"
requires-python = ">=3.12,<3.15"

dependencies = [
    "jinja2",
    "jsonschema",
    "pydantic",
    "ops",
    "cosl",
    "opentelemetry-exporter-otlp-proto-http",
    "interface_tls_certificates@git+https://opendev.org/openstack/charm-ops-interface-tls-certificates",
    "tenacity", # From ops_sunbeam
    "opentelemetry-api~=1.21.0",  # charm_tracing library -> opentelemetry-sdk requires 1.21.0
    "cryptography",
]
