# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "neutron-k8s"
version = "2026.1"
requires-python = ">=3.12,<3.15"

dependencies = [
    "cryptography",
    "jinja2",
    "jsonschema",
    "pydantic",
    "lightkube",
    "lightkube-models",
    "ops",
    "cosl",
    "opentelemetry-exporter-otlp-proto-http",
    "tenacity", # From ops_sunbeam
    "opentelemetry-api~=1.21.0",  # charm_tracing library -> opentelemetry-sdk requires 1.21.0
]
