# Copyright 2026 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "openstack-port-cni-k8s"
version = "2026.1"
requires-python = "~=3.12.0"

dependencies = [
    # Core Juju operator framework
    "ops",
    # Manifest management
    "ops-manifest",
    # Kubernetes client
    "lightkube",
    "lightkube-models",
    "tenacity",
    "opentelemetry-api~=1.21.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ops[testing]",
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "cryptography>=46.0.5",
]
