# Copyright 2022 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "sunbeam-clusterd"
version = "2025.1"
requires-python = ">=3.12,<3.15"

dependencies = [
    "cryptography",
    "jinja2",
    "jsonschema",
    "pydantic",
    "lightkube",
    "lightkube-models",
    "ops",
    "opentelemetry-exporter-otlp-proto-http",
    "requests<2.32.0",
    "requests-unixsocket",
    "urllib3<1.27,>=1.21.1",
    "tenacity", # From ops_sunbeam
    "opentelemetry-api~=1.21.0",  # charm_tracing library -> opentelemetry-sdk requires 1.21.0
    "cosl",
]
