# Copyright 2022 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "sunbeam-machine"
version = "2025.1"
requires-python = "~=3.12.0"

dependencies = [
    "cryptography",
    "jinja2",
    "jsonschema",
    "pyroute2",
    "netifaces",
    "lightkube",
    "lightkube-models",
    "ops",
    "tenacity", # From ops_sunbeam
    "opentelemetry-api~=1.21.0",  # charm_tracing library -> opentelemetry-sdk requires 1.21.0
    "charmlibs-apt"
]
