# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "watcher-k8s"
version = "2025.1"
requires-python = "~=3.12.0"

dependencies = [
    "jinja2",
    "pydantic",
    "lightkube",
    "ops",
    "tenacity", # From ops_sunbeam
    "opentelemetry-api~=1.21.0",  # charm_tracing library -> opentelemetry-sdk requires 1.21.0
]
