# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "cinder-volume-hitachi"
version = "2025.1"
requires-python = "~=3.12.0"

dependencies = [
    "cryptography",
    "jinja2",
    "pydantic",
    "lightkube",
    "lightkube-models",
    "requests",
    "ops",
    "interface_tls_certificates@git+https://opendev.org/openstack/charm-ops-interface-tls-certificates",
    "interface_ceph_client@git+https://opendev.org/openstack/charm-ops-interface-ceph-client",
    "charmhelpers@git+https://github.com/juju/charm-helpers.git",
    "netifaces",
    "tenacity", # From ops_sunbeam
    "opentelemetry-api~=1.21.0",  # charm_tracing library -> opentelemetry-sdk requires 1.21.0
]
