# Copyright 2026 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "cinder-volume-ibmgpfs"
version = "2024.1"
requires-python = "~=3.12.0"

dependencies = [
    "cryptography",
    "jinja2",
    "pydantic",
    "lightkube",
    "lightkube-models",
    "requests",
    "ops",
    "netifaces",
    "tenacity",
    "opentelemetry-api~=1.21.0",
]
